<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SWPuzzleSolver</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="desc">desc</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="solve">Solve</string>
    <string name="next_step">Next Step</string>
    <string name="show_original">Original</string>

</resources>